# witchwell

./: .gitignore  .pre-commit-config.yaml  DECISIONS.md  LICENSE  README.md  Untitled.ipynb  app.py  justfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eval/: conftest.py  queries.json  test_retrieval.py
witchwell/: __init__.py  ingest.py  jargon.py  metrics.py  models.py  search.py
